--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Robert John Mora Jr."
+title                    : "Robert John Mora Jr"
 title_separator          : "-"
 name                     : "Robert John Mora Jr."
 description              : "My Programming Portfolio"
