--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "mint" # "air", "aqua", "contrast", "dark", "dirt", "
 locale                   : "en-US"
 title                    : "Robert John Mora Jr"
 title_separator          : "-"
-name                     : "Robert John Mora Jr."
+name                     : "Robert John Mora Jr"
 description              : "My Programming Portfolio"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
@@ -107,11 +107,24 @@ author:
   location         : "Highland, CA"
   email            : "RMoraProgramming@gmail.com"
   links:
-
+    -label: "Email"
+      icon: "fas fa-fw fa-envelope-square"
+      # url: mailto:your.name@email.com
+    - label: "Website"
+      icon: "fas fa-fw fa-link"
+      # url: "https://your-website.com"
+    - label: "Twitter"
+      icon: "fab fa-fw fa-twitter-square"
+      # url: "https://twitter.com/"
+    - label: "Facebook"
+      icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
     - label: "GitHub"
-      icon: "RMoraProgramming"
+      icon: "fab fa-fw fa-github"
       # url: "https://github.com/"
+    - label: "Instagram"
+      icon: "fab fa-fw fa-instagram"
+      # url: "https://instagram.com/"
 
 
 # Site Footer
@@ -276,10 +289,12 @@ defaults:
       comments: # true
       share: true
       related: true
-    # _pages
-- scope:
+
+
+ # _pages
+ -scope:
   path: ""
-    type: pages
-    values:
-      layout: single
-      author_profile: true
+  type: pages
+  values:
+  layout: single
+  author_profile: true
