--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 main:
   - title: "About"
     url: /about/
-  - title: "Programmming Experience"
-    url: /programmming-experience/
+  - title: "Programming Experience"
+    url: /programming-experience/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
